segway-v2/assets/css/style.css
/*
ul - #2D1E2F
ul link - #6A706E
container background - #eee
headers - #533857
p - #4F5452
*/

html {
  box-sizing: border-box;
}

*{
    margin: 0;
    font-family: "Lato", sans-serif;
    box-sizing: border-box;
}

/* ----- Utility Styles ---- */
.img-right {
  float: right;
  margin: 10px 0 10px 20px;
  border: 1px solid #c0c0c0;
  padding: 1px;
}

.img-left {
  float: left;
  margin: 10px 20px 10px 0;
  border: 1px solid #c0c0c0;
  padding: 1px;
}

.img-center {
  display: block;
  margin: 20px auto;
  border: 1px solid #c0c0c0;
  padding: 1px;
}


/* ------------- Header --------------- */
header.primary{
    width: 100%;
    height: auto;
    background: rgb(45,30,47);
    background: linear-gradient(0deg, rgba(45,30,47,1) 30%, rgba(45,30,47,0.7) 100%);
    display: flex;
    flex-direction: column;
}

header.primary h1{
    font-size: 3rem;
    margin: 20px 0;
    position: relative;
}

header.primary h1 a{
  color: #2D1E2F;
  background-image: url("../img/segway_logo.gif");
  background-repeat: no-repeat;
  display: block;
  width: 650px;
  height: 220px;
  margin: 0 auto;
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
}

header.primary h2 {
  font-family: 'Courgette', cursive;
  color: #eee;
  font-size: 2.5rem;
  /* Shorhand Three Value Top, Left/Right, Bottom*/
  margin: 20px auto 40px;
  position: relative;
}

header.primary nav{
    margin-top: auto;
}

header.primary nav ul {
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 0;
  max-width: 70%;
  margin: 20px auto;
}

header.primary nav li {
  list-style-type: none;
  padding: 0;
  width: 20%;
}

header.primary nav a:link,
header.primary nav a:visited {
    text-decoration: none;
    background-color: #6A706E;
    background-color: rgba(106, 112, 110, 0.5);
    box-shadow: 0 8px 15px rgb(0, 0, 0, 0.5);
    color: #eee;
    padding: 0.5rem 2.5rem;
    text-align: center;
    border-radius: 0.75rem;
    transition: 0.4s;
    display: block;
}

header.primary nav a:hover,
header.primary nav a:active {
  background-color: rgba(107, 72, 112, 0.8);
  box-shadow: 0 10px 15px rgb(0, 0, 0, 0.9);
}


/* ------------- Body --------------- */
body{
    display: flex;
    flex-direction: column;
    height: 100vh;
    background-color: #eee;
}

.container {
  width: 80vw;
  margin: 40px auto;
  max-width: 70%;
  padding: 1rem;
}

.container h2{
    margin: 1rem 0;
    font-family: 'Oswald', sans-serif;
    font-size: 2.5rem;
    color: #533857;
}

.container p{
    padding: 0.5rem 0;
    color: #4F5452;
}

.container h3{
    margin: 3rem 0 0.5rem;
    font-family: 'Oswald', sans-serif;
    font-size: 1.75rem;
    color: #533857;
}

img {
  max-width: 100%;
  height: auto;
  box-shadow: -5px 5px 10px #6A706E;
}



/* ------------- Articles --------------- */

#articles {
  background: #C0C4C2;
}

#articles .container {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: stretch;
  flex-wrap: wrap;
  border-bottom: 1px solid #c0c0c0;
  padding: 0 0 4em 0;
}

#articles h2,
#content h2 {
  flex: 0 0 100%;
  color: #533857;
  font-family: 'Oswald', sans-serif;
  font-size: 2.5em;
}

#articles h2 {
  text-align: center;
  text-shadow: 2px -2px #000;
  font-size: 4rem;
}

#articles article.post {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 20%;
  box-shadow: -3px 5px 20px rgba(0, 0, 0, 0.4);
  padding: 10px;
  transition: 0.4s;
  font-size: 0.8rem;
  border-radius: 10px;
  background: #f5f5f5;
  margin: 0.5rem 0;
}

#articles article.post h2 {
  font-size: 1.5em;
  text-shadow: none;
}

#articles article.post:hover {
  box-shadow: -3px 5px 20px rgba(0, 0, 0, 0.8);
}

#articles article time,
#articles article figcaption,
#articles article footer {
  font-size: 0.8em;
  color: #c0c0c0;
  text-transform: uppercase;
}

#articles .post a:link,
#articles .post a:visited {
  color: #533857;
  font-family: 'Oswald', sans-serif;
}

#articles .post figure {
  margin: 0;
  
}

#articles .post img {
  border-radius: 10px;
  box-shadow: none;
}




/* ------------- Hero --------------- */

#hero{
  padding: 0;
  border-radius: 10px;
}

#hero img{
  border-radius: 10px;
  background-color: #6A706E;
}

#hero figcaption {
  flex: 0 0 100%;
  color: #533857;
  font-family: 'Oswald', sans-serif;
  font-size: 1.5em;
}

#hero h2{
  margin: 1rem 0;
  font-family: 'Oswald', sans-serif;
  font-size: 1.75rem;
  color: #533857;
}

#hero blockquote {
  background: #f5f5f5;
  padding: 15px 15px;
  margin: 1rem;
  border: 5px solid rgba(107, 72, 112, 0.8);
  border-radius: 20px;
  font-size: 1.2em;
  color: #666666;
  box-shadow: -5px 7px 20px rgba(0, 0, 0, 0.4);
}

#hero blockquote cite{
  display: block;
  text-align: right;
  /*color: #533857;*/
  color: #A0A6A4;
  font-weight: bold;
  font-size: 1rem;
  padding-top: 0.5rem;  
}





/*----------Read More Buttons------------*/
.hide1,
.hide2,
.hide3,
.hide4{
  display: none;
}

.articleButton{
  border: none;
  font-size: 14pt;
  background-color: rgba(107, 72, 112, 0.8);
  color: #eee;
  border-radius: 7px;
  box-shadow: -3px 3px 8px rgb(0, 0, 0, 0.5);
}

.articleButton:hover{
  background-color: rgba(163, 118, 167, 0.8);
  box-shadow: -5px 5px 12px rgb(0, 0, 0, 0.8);
}





/*----------Article Scroll Bar------------*/
/*width */
.newWindow::-webkit-scrollbar {
	width: 0.75rem;
	background-color: #cccccc;
}

 /*Track */
.newWindow::-webkit-scrollbar-track {
	-webkit-box-shadow: inset 0 0 6px #f5f5f5;
	background-color: #cccccc;
}

 /*Handle */
.newWindow::-webkit-scrollbar-thumb {
  background-color: rgba(107, 72, 112, 0.8);
	border-radius: 10px;
}

/* Handle on hover */
.newWindow::-webkit-scrollbar-thumb:hover {
  background-color: rgba(163, 118, 167, 0.8);
}



/*----------Page Scroll Bar------------*/
 /*width */
body::-webkit-scrollbar {
  width: 1.25rem;
}

 /*Track */
body::-webkit-scrollbar-track {
  box-shadow: inset 0 0 6px grey; 
  border-radius: 10px;
}
 
 /*Handle */
body::-webkit-scrollbar-thumb {
  background-color: rgba(107, 72, 112, 0.8);
  border-radius: 10px;
}

/* Handle on hover */
body::-webkit-scrollbar-thumb:hover {
  background-color: rgba(163, 118, 167, 0.8);
}





/*----------Article Pop Up------------*/

.fadedBackground{
  position: fixed;
  height: 100%;
  width: 100%;
  background: rgb(94,92,94, 0.9);
}

.newWindow{
  max-width: 60%;
  height: 90%;
  overflow: auto;
  margin: auto;
  position: fixed;
  top: 0; left: 0; bottom: 0; right: 0;
  background: #f5f5f5;
  border-radius: 10px;
  box-shadow: -3px 5px 20px rgba(0, 0, 0, 0.6);
}

.tempArticle{
  
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 1rem;
}

.tempArticle img{
  border-radius: 10px;
}

.tempArticle figcaption{
  font-size: 1em;
  color: #c0c0c0;
  text-transform: uppercase;
  margin-top: 1rem;
}

.tempArticle h2 {
  color: #533857;
  font-family: 'Oswald', sans-serif;
  text-align: center;
  text-shadow: none;
  font-size: 3rem;
}

.tempList{
  display: block;
  margin: 2rem;
}

.tempList li{
  color: #4F5452;
  margin-bottom: 20px;  
  list-style-image: url("../img/arrow-icon.png"); 
}

.newWindowButton{
  position: relative;
  left: 94.5%;
  margin: 10px auto;
  content: '\274c';
  border: none;
  font-size: 14pt;
  background-color: rgba(107, 72, 112, 0.8);
  color: #eee;
  border-radius: 7px;
  box-shadow: -3px 3px 8px rgb(0, 0, 0, 0.5);
}

.newWindowButton:hover{
  background-color: rgba(163, 118, 167, 0.8);
  box-shadow: -5px 5px 12px rgb(0, 0, 0, 0.8);
}





/* ------------- FAQ --------------- */
.faq{
  display: flex;
  flex-direction: column;
  align-items: center;
}

#content .faq h2{
  font-size: 5em;
}

.QandA {
  width: 35vw;
  display: flex;
  border: 1px solid #aaa;
  border-radius: 10px;
  margin: 0.5rem;
  background-color: #f5f5f5;
  /* offset-x | offset-y | blur-radius | color */
  box-shadow: -5px 5px 5px #6A706E;
}

.QandA #question{
  width: 100%;
}

.QandA #faqHeader{
  width: 100%;
  background-color: #C0C4C2;
  border-radius: 10px;
  padding: 1rem 1rem 2rem;
}

.QandA h3 {
  cursor: pointer;
  display: inline;
  font-weight: bold;
  font-size: 35px;
  
}

.QandA .info {
  display: none;
  font-size: 18px;
  width: 100%;
  padding: 1em;
  background-color: #f5f5f5;
  border-radius: 10px;
}

.QandA.opened #faqHeader{
  box-shadow: -5px 5px 5px #6A706E;
}

.QandA.opened .info {
  margin-top: 1rem;
  display: block;
}

.QandA #status {
  content: url("../img/faq-arrow-icon.gif");
  display: inline;
  transform: rotate(0deg);
  transition: transform 0.35s;
}

.QandA.opened #status {
  transform: rotate(90deg);
  transition: transform 0.35s;
}

.disclaimer h4{
    margin: 2rem 0 0;
    font-family: 'Oswald', sans-serif;
    font-size: 1rem;
    color: #533857;
}

.disclaimer p{
   font-size: 0.8rem;
}





/* ------------- Footer --------------- */
footer{
    background-color: #2D1E2F;
    padding-top: 0.5rem;
    width: 100%;
    margin-top: auto;
}

footer nav{
    padding: 1rem;
}

footer nav ul{
    display: flex;
    /*flex-direction: column;*/
    justify-content: space-around;
    list-style: none;
    max-width: 70%;
    margin: 1rem auto 1rem;
    padding: 0 1rem;
}

footer nav ul li{
    margin-bottom: 0.5rem;
}

footer nav ul li a{
    color: #eee;
    text-decoration: none;
}

footer h6{
    color: #eee;
    text-align: center;
    padding-bottom: 1rem;
    font-size: 0.8rem;
    font-weight: normal;
}

footer h6 a{
    color: #eee;
}



/* ---------------Media Queries----------------- */
@media screen and (max-width: 600px) {
  header.primary nav ul {
    flex-direction: column;
    margin: 0 auto;
    width: 400px;
  }

  header.primary nav ul li {
    margin-bottom: 10px;
    width: 400px;
  }

  header.primary nav ul li a {
    display: block;
  }

 #articles .container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex-wrap: wrap;
    border-bottom: 1px solid #c0c0c0;
    padding: 0 0 4em 0;
  }

  #articles article.post {
    width: 100%;
    margin-bottom: 2em;
  }
  
}

